fix: footer about was blurry

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -50,8 +50,23 @@
 .customFuture {
   position: absolute;
   left: 50%;
-  top: 3rem;
+  top: 3.6rem;
   transform: translate(-50%, 0);
 
-  width: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  p {
+    text-align: right;
+    margin: 0 16px 0 0;
+    font-size: 10px;
+    line-height: 12px;
+    width: 8rem;
+  }
+
+  img {
+    width: 5rem;
+    margin: 0;
+  }
 }
